   used even if the OS provide a getline(). This should reduce the
   configuration complexity by using the same code on all platforms.

 Java:
 * Reintegrate Java to the main archive as desynchronizing these
   package is not acceptable anymore (Java is now considered stable)
 * Bugfix: Task.setDataSize() only changed the C world, not the value
   cached in the Java world

 SMPI:
 * SMPI is not built as a separate library anymore, it's now included in
   libsimgrid.
 * Improvements of the SMPI replay tool:
   - Most of the collective communications are now rooted in the same process as
     in the original application.
   - Traces now rely on the same MPI datatype as the application (MPI_BYTE was
     used until now). Multiple datatypes can now be used in a trace.
   - The replay tool now supports traces produce either by TAU or a modified
     version of MPE.
   - Bug Fix: the compute part of the reduce action is now taken into account.

-- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.9) stable; urgency=low

 The Grasgory release: GRAS is really dead now.

 * Complete overhaul of the internal host structures scheme.

 GRAS:
 * If you use GRAS, you should stay at SimGrid 3.5 (at most) since it
   was considered as experimental and badly maintained since then.
 * Keeping it was thus a trap to our potential users, that could take
   it instead of MSG or SMPI by mistake despite is pity state.
 * GRAS seems to have very few users (if any), and no one volunteered
   to maintain it further. It also induces a lot of XBT code (for
   portability sake), that must be maintained too.
 * For all these reasons, we killed GRAS. If someone wants to revive it
   in the future, don't cry, our git history still remembers of GRAS.

 Documentation:
 * Major overhaul. Merge our documentation again as time proved that
   splitting it was really not helping our users.
 * Further improve the developer documentation to help newcomers